# retronomicon-sdl

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  disable_opus.sh
include/retronomicon/asset/: sdl_font_asset.h  sdl_music_asset.h  sdl_sound_effect_asset.h
include/retronomicon/audio/: sdl_audio_player.h
include/retronomicon/graphics/: sdl_color.h  sdl_texture.h  sdl_window.h
include/retronomicon/graphics/renderer/: sdl_renderer.h
include/retronomicon/input/: sdl_input_map.h  sdl_key.h  sdl_raw_input.h
include/retronomicon/manager/: sdl_texture_manager.h
src/: CMakeLists.txt
src/asset/: CMakeLists.txt  sdl_font_asset.cpp  sdl_music_asset.cpp  sdl_sound_effect_asset.cpp
src/audio/: CMakeLists.txt  sdl_audio_player.cpp
src/graphics/: CMakeLists.txt  sdl_texture.cpp  sdl_window.cpp
src/graphics/renderer/: sdl_renderer.cpp
src/input/: CMakeLists.txt  sdl_input_map.cpp  sdl_raw_input.cpp
src/manager/: CMakeLists.txt  sdl_texture_manager.cpp
